--- a/ui/src/app/connect/dialog/edit-event-property/components/ep-settings-section/ep-settings-section.component.scss
+++ b/ui/src/app/connect/dialog/edit-event-property/components/ep-settings-section/ep-settings-section.component.scss
@@ -16,28 +16,17 @@
  *
  */
 
-import { Component, EventEmitter, Input, OnInit, Output } from '@angular/core';
-import { DataTypesService } from '../../../../services/data-type.service';
+.ep-settings-section {
+  padding-left: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-right: 5px;
+}
 
-@Component({
-  selector: 'sp-edit-data-type',
-  templateUrl: './edit-data-type.component.html',
-  styleUrls: ['./edit-data-type.component.scss']
-})
-export class EditDataTypeComponent implements OnInit {
+.ep-settings-section-border {
+  border-left:5px solid gray;
+}
 
-  @Input() cachedProperty: any;
-  @Output() dataTypeChanged = new EventEmitter<boolean>();
-
-  runtimeDataTypes;
-  constructor(private dataTypeService: DataTypesService) { }
-
-  ngOnInit() {
-    this.runtimeDataTypes = this.dataTypeService.getDataTypes();
-  }
-
-  valueChanged() {
-    this.dataTypeChanged.emit(true);
-  }
-
+.description {
+  font-size: 10px;
 }
