[STREAMPIPES-558] Improve layout of adapter start page

--- a/ui/src/scss/sp/layout.scss
+++ b/ui/src/scss/sp/layout.scss
@@ -195,3 +195,8 @@ img {
 .small-select .mat-form-field-wrapper {
   padding-bottom: 0;
 }
+
+.large-checkbox .mat-checkbox-inner-container {
+  width: 20px;
+  height: 20px;
+}
