--- a/ui/src/app/connect/components/new-adapter/start-adapter-configuration/adapter-options-panel/adapter-options-panel.component.scss
+++ b/ui/src/app/connect/components/new-adapter/start-adapter-configuration/adapter-options-panel/adapter-options-panel.component.scss
@@ -16,26 +16,30 @@
  *
  */
 
-.general-panel {
-  border: 2px solid var(--color-bg-3);
-  padding: 15px;
-}
-
-.general-panel-header {
-  background: var(--color-bg-2);
-  border: 2px solid var(--color-bg-3);
-  border-bottom: 0;
-  padding-left: 5px;
-  height: 50px;
-  min-height: 50px;
-}
-
-.adapter-options-section {
-  margin-top: 6px;
-}
-
-.content-box-title {
-  padding-left: 8px;
+.options-panel {
   border-left: 4px solid var(--color-accent);
+  border-bottom: 1px solid var(--color-bg-2);
+  border-top: 1px solid var(--color-bg-2);
+  border-right: 1px solid var(--color-bg-2);
+  padding: 8px;
+  background: var(--color-bg-1);
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
 
+.title {
+  color: var(--color-default-text);
+  font-weight: 600;
+  font-size: 14pt;
+  margin-bottom: 10px;
+}
+
+.description {
+  font-size: 11pt;
+}
+
+.icon {
+  margin-right: 10px;
+  color: var(--color-accent);
+  font-size: 22pt;
+}
