--- a/ui/src/app/connect/components/new-adapter/format-configuration/format-item-json/format-item-json.component.scss
+++ b/ui/src/app/connect/components/new-adapter/format-configuration/format-item-json/format-item-json.component.scss
@@ -42,6 +42,7 @@
 
 .selectedItem {
   opacity: 1;
-  background-color: grey;
+  background-color: var(--color-accent);
+  color: var(--color-bg-2);
 }
 
