--- a/ui/src/app/connect/components/new-adapter/format-configuration/format-list/format-list.component.html
+++ b/ui/src/app/connect/components/new-adapter/format-configuration/format-list/format-list.component.html
@@ -33,9 +33,9 @@
     </div>
 
     <div fxFlex="100"
-         class="assemblyOptions sp-blue-bg"
+         class="format-title"
          *ngIf="selectJsonFormats">
-        <h4>Select json format</h4>
+        <h4>Select JSON format</h4>
     </div>
 
     <div fxFlex="25"
