--- a/ui/projects/streampipes/shared-ui/src/lib/components/basic-inner-panel/basic-inner-panel.component.html
+++ b/ui/projects/streampipes/shared-ui/src/lib/components/basic-inner-panel/basic-inner-panel.component.html
@@ -16,18 +16,15 @@
   ~
   -->
 
-<div style="padding: 15px;">
-    <form [formGroup]="configurationGroup" fxFlex="100">
-        <div fxFlex="100" >
-            <app-static-property *ngFor="let config of configuration"
-                                 [staticProperty]="config"
-                                 [staticProperties]="configuration"
-                                 [adapterId]="adapterId"
-                                 [parentForm]="configurationGroup"
-                                 [fieldName]="config.internalName"
-                                 (updateEmitter)="triggerUpdate($event)"
-                                 [completedStaticProperty]="completedStaticProperty">
-            </app-static-property>
+<div fxLayout="column" fxFlex="100" class="panel-outer" [ngStyle]="{margin: outerMargin}">
+    <div class="general-panel-header" fxLayout="row" fxFlex="100" fxLayoutAlign="start center">
+        <div fxLayout="fill" fxFlex="100">
+            <div class="content-box-title" *ngIf="showTitle">{{panelTitle}}</div>
+            <ng-content select="[header]" fxFlex></ng-content>
         </div>
-    </form>
+    </div>
+
+    <div class="general-panel" [ngStyle]="{padding: innerPadding}">
+        <ng-content fxFlex="100"></ng-content>
+    </div>
 </div>
