--- a/ui/src/app/connect/components/new-adapter/format-configuration/format-configuration.component.html
+++ b/ui/src/app/connect/components/new-adapter/format-configuration/format-configuration.component.html
@@ -24,7 +24,7 @@
         </sp-format-list>
     </sp-basic-inner-panel>
 
-    <sp-basic-inner-panel panelTitle="Configure Format" outerMargin="10px 0px" *ngIf="selectedFormat">
+    <sp-basic-inner-panel panelTitle="Configure Format" outerMargin="10px 0px 20px 0px" *ngIf="selectedFormat">
 
         <div *ngIf="selectedFormat">
             <div *ngIf="selectedFormat.config.length > 0">
