--- a/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.html
@@ -18,51 +18,73 @@
 
 
 <div fxLayout="row" fxLayoutAlign="center">
-    <div fxFlex="0 1 80%">
-        <sp-basic-inner-panel [showTitle]="false" outerMargin="20px 0px">
-        <div header *ngIf="!isLoading && !isError" fxFlex="100">
-            <sp-schema-editor-header fxFlex="100"
-                    [countSelected]="countSelected"
-                    [schemaErrorHints]="schemaErrorHints"
-                    [displayMessages]="validEventSchema"
-                    (addNestedPropertyEmitter)="addNestedProperty()"
-                    (addStaticValuePropertyEmitter)="addStaticValueProperty()"
-                    (addTimestampPropertyEmitter)="addTimestampProperty()"
-                    (guessSchemaEmitter)="guessSchema()"
-                    (togglePreviewEmitter)="togglePreview()"
-                    (removeSelectedPropertiesEmitter)="removeSelectedProperties()">
-            </sp-schema-editor-header>
-        </div>
-
-        <div fxFlex="100">
-
-            <sp-loading-message *ngIf="isLoading"></sp-loading-message>
-
-            <sp-error-message
-                    [errorMessages]="errorMessages"
-                    *ngIf="isError">
-            </sp-error-message>
-
-            <div *ngIf="!isError && !isLoading"
+    <div fxFlex="80" fxLayout="column">
+        <div fxLayout="column"
+             fxFlex="100"
+             fxLayoutAlign="start center"
+             [ngClass]="schemaErrorHints.length === 0 ? 'schema-validation schema-validation-ok' : 'schema-validation schema-validation-error'">
+            <div fxFlex="100"
+                 fxLayout="row"
+                 fxLayoutAlign="start center"
+                 class="schema-validation-text-ok"
+                 *ngIf="schemaErrorHints.length === 0">
+                <i class="material-icons">check_circle</i>&nbsp;<b>Schema ok</b>
+            </div>
+            <div fxFlex="100"
                  fxLayout="column"
-                 fxLayoutAlign="space-evenly stretched"
-                 class="drag-drop-tree"
-                 data-cy="sp-connect-schema-editor">
-                <tree-root #tree
-                           [nodes]="nodes"
-                           [options]="options"
-                           (updateData)="onUpdateData(tree)">
-                    <ng-template #treeNodeTemplate let-node let-index="index">
-                        <event-property-row
-                                [node]="node"
-                                [(isEditable)]="isEditable"
-                                [(eventSchema)]="eventSchema"
-                                (refreshTreeEmitter)="refreshTree()"
-                                [(countSelected)]="countSelected"></event-property-row>
-                    </ng-template>
-                </tree-root>
+                 fxLayoutAlign="start center"
+                 *ngIf="schemaErrorHints.length > 0">
+                <div fxFlex="100" fxLayout="row" fxLayoutAlign="center start" class="schema-validation-text-error">
+                <i class="material-icons">warning</i>&nbsp;
+                    <b>{{schemaErrorHints[0].title}}</b>
+                </div>
+                <div *ngFor="let errorMessage of schemaErrorHints">
+                    <span>{{errorMessage.content}}</span>
+                </div>
             </div>
         </div>
+        <sp-basic-inner-panel [showTitle]="false" outerMargin="0px 0px 20px 0px">
+            <div header *ngIf="!isLoading && !isError" fxFlex="100">
+                <sp-schema-editor-header fxFlex="100"
+                                         [countSelected]="countSelected"
+                                         (addNestedPropertyEmitter)="addNestedProperty()"
+                                         (addStaticValuePropertyEmitter)="addStaticValueProperty()"
+                                         (addTimestampPropertyEmitter)="addTimestampProperty()"
+                                         (guessSchemaEmitter)="guessSchema()"
+                                         (togglePreviewEmitter)="togglePreview()"
+                                         (removeSelectedPropertiesEmitter)="removeSelectedProperties()">
+                </sp-schema-editor-header>
+            </div>
+
+            <div fxFlex="100">
+
+                <sp-loading-message *ngIf="isLoading"></sp-loading-message>
+
+                <sp-error-message
+                        [errorMessages]="errorMessages"
+                        *ngIf="isError">
+                </sp-error-message>
+
+                <div *ngIf="!isError && !isLoading"
+                     fxLayout="column"
+                     fxLayoutAlign="space-evenly stretched"
+                     class="drag-drop-tree"
+                     data-cy="sp-connect-schema-editor">
+                    <tree-root #tree
+                               [nodes]="nodes"
+                               [options]="options"
+                               (updateData)="onUpdateData(tree)">
+                        <ng-template #treeNodeTemplate let-node let-index="index">
+                            <event-property-row
+                                    [node]="node"
+                                    [(isEditable)]="isEditable"
+                                    [(eventSchema)]="eventSchema"
+                                    (refreshTreeEmitter)="refreshTree()"
+                                    [(countSelected)]="countSelected"></event-property-row>
+                        </ng-template>
+                    </tree-root>
+                </div>
+            </div>
         </sp-basic-inner-panel>
     </div>
     <div fxFlex="0 1 50%" *ngIf="isPreviewEnabled">
